test/files/neg/t1038.check
t1038.scala:4: error: not enough arguments for constructor X: (x: Int)X.
Unspecified value parameter x.
  val a = new X
          ^
one error found
